cassette_client_sources = files(
  'yam_object.vala',
  'jsoner.vala',
  'utils.vala',
  'soup_wrapper.vala',
  'logger.vala',
  'threader.vala',
  'likes_controller.vala',
  'talkers/abstract_talker.vala',
  'talkers/yam_talker.vala',
  'player/player.vala',
  'player/player_flow.vala',
  'player/player_track_list.vala',
  'player/mpris.vala',
  'player/track_local.vala',
  'cachier/info_db.vala',
  'cachier/storager.vala',
  'cachier/cachier.vala',
  'cachier/job.vala',
  'cachier/controller.vala',
  'api/yam_client.vala',
  'api/difference_builder.vala',
  'api/objects/api_error.vala',
  'api/objects/track_heap.vala',
  'api/objects/cover.vala',
  'api/objects/icon.vala',
  'api/objects/plays.vala',
  'api/objects/track_short.vala',
  'api/objects/download_info.vala',
  'api/objects/account/about.vala',
  'api/objects/library/all_ids.vala',
  'api/objects/playlist/playlist_recommendations.vala',
  'api/objects/playlist/playlist.vala',
  'api/objects/playlist/user.vala',
  'api/objects/playlist/made_for.vala',
  'api/objects/playlist/play_counter.vala',
  'api/objects/playlist/playlist_absence.vala',
  'api/objects/playlist/case_forms.vala',
  'api/objects/playlist/liked_playlist.vala',
  'api/objects/album/album.vala',
  'api/objects/album/label.vala',
  'api/objects/album/volume.vala',
  'api/objects/artist/artist.vala',
  'api/objects/artist/counts.vala',
  'api/objects/artist/ratings.vala',
  'api/objects/artist/link.vala',
  'api/objects/track/track.vala',
  'api/objects/track/lyrics_info.vala',
  'api/objects/track/meta_data.vala',
  'api/objects/track/chart.vala',
  'api/objects/additional_info/similar_tracks.vala',
  'api/objects/additional_info/lyrics.vala',
  'api/objects/additional_info/lyrics_major.vala',
  'api/objects/rotor/wave.vala',
  'api/objects/rotor/session_new.vala',
  'api/objects/rotor/block.vala',
  'api/objects/rotor/station_tracks.vala',
  'api/objects/rotor/settings.vala',
  'api/objects/rotor/sequence.vala',
  'api/objects/rotor/id.vala',
  'api/objects/rotor/value_heap.vala',
  'api/objects/rotor/value.vala',
  'api/objects/rotor/track_parameters.vala', 
  'api/objects/rotor/station_tracks.vala',
  'api/objects/rotor/restrictions.vala',
  'api/objects/rotor/dashboard.vala',
  'api/objects/rotor/station_info.vala',
  'api/objects/rotor/station.vala'
)