cassette_client_sources = files(
  'api/objects/account/about.vala',
  'api/objects/additional_info/lyrics.vala',
  'api/objects/additional_info/lyrics_major.vala',
  'api/objects/additional_info/similar_tracks.vala',
  'api/objects/album/album.vala',
  'api/objects/album/label.vala',
  'api/objects/album/volume.vala',
  'api/objects/api_error.vala',
  'api/objects/artist/artist.vala',
  'api/objects/artist/counts.vala',
  'api/objects/artist/link.vala',
  'api/objects/artist/ratings.vala',
  'api/objects/cover.vala',
  'api/objects/download_info.vala',
  'api/objects/icon.vala',
  'api/objects/library/all_ids.vala',
  'api/objects/playlist/case_forms.vala',
  'api/objects/playlist/liked_playlist.vala',
  'api/objects/playlist/made_for.vala',
  'api/objects/playlist/play_counter.vala',
  'api/objects/playlist/playlist.vala',
  'api/objects/playlist/playlist_absence.vala',
  'api/objects/playlist/playlist_recommendations.vala',
  'api/objects/playlist/user.vala',
  'api/objects/plays.vala',
  'api/objects/rotor/block.vala',
  'api/objects/rotor/dashboard.vala',
  'api/objects/rotor/event.vala',
  'api/objects/rotor/feedback.vala',
  'api/objects/rotor/id.vala',
  'api/objects/rotor/queue.vala',
  'api/objects/rotor/restrictions.vala',
  'api/objects/rotor/seed.vala',
  'api/objects/rotor/sequence.vala',
  'api/objects/rotor/session_new.vala',
  'api/objects/rotor/settings.vala',
  'api/objects/rotor/station.vala',
  'api/objects/rotor/station_info.vala',
  'api/objects/rotor/station_tracks.vala',
  'api/objects/rotor/station_tracks.vala',
  'api/objects/rotor/track_parameters.vala', 
  'api/objects/rotor/value.vala',
  'api/objects/rotor/value_heap.vala',
  'api/objects/rotor/wave.vala',
  'api/objects/track/chart.vala',
  'api/objects/track/lyrics_info.vala',
  'api/objects/track/meta_data.vala',
  'api/objects/track/track.vala',
  'api/objects/track_heap.vala',
  'api/objects/track_short.vala',
  'api/difference_builder.vala',
  'api/yam_client.vala',

  'cachier/cachier.vala',
  'cachier/controller.vala',
  'cachier/info_db.vala',
  'cachier/job.vala',
  'cachier/storager.vala',

  'player/mods/abstract_mode.vala',
  'player/mods/abstract_shufflable.vala',
  'player/mods/empty.vala',
  'player/mods/flow.vala',
  'player/mods/local.vala',
  'player/mods/track_list.vala',
  'player/mpris.vala',
  'player/player.vala',

  'talkers/abstract_talker.vala',
  'talkers/yam_talker.vala',

  'jsoner.vala',
  'likes_controller.vala',
  'logger.vala',
  'soup_wrapper.vala',
  'threader.vala',
  'utils.vala',
  'yam_object.vala',
)