cassette_client_sources = files(
  'api/objects/account/about.vala',
  'api/objects/additional-info/lyrics.vala',
  'api/objects/additional-info/lyrics-major.vala',
  'api/objects/additional-info/similar-tracks.vala',
  'api/objects/album/album.vala',
  'api/objects/album/label.vala',
  'api/objects/album/volume.vala',
  'api/objects/api-error.vala',
  'api/objects/artist/artist.vala',
  'api/objects/artist/counts.vala',
  'api/objects/artist/link.vala',
  'api/objects/artist/ratings.vala',
  'api/objects/cover.vala',
  'api/objects/download-info.vala',
  'api/objects/icon.vala',
  'api/objects/library/all-ids.vala',
  'api/objects/playlist/case-forms.vala',
  'api/objects/playlist/liked-playlist.vala',
  'api/objects/playlist/made-for.vala',
  'api/objects/playlist/play-counter.vala',
  'api/objects/playlist/playlist.vala',
  'api/objects/playlist/playlist-absence.vala',
  'api/objects/playlist/playlist-recommendations.vala',
  'api/objects/playlist/user.vala',
  'api/objects/plays.vala',
  'api/objects/rotor/block.vala',
  'api/objects/rotor/dashboard.vala',
  'api/objects/rotor/event.vala',
  'api/objects/rotor/feedback.vala',
  'api/objects/rotor/id.vala',
  'api/objects/rotor/queue.vala',
  'api/objects/rotor/restrictions.vala',
  'api/objects/rotor/seed.vala',
  'api/objects/rotor/sequence.vala',
  'api/objects/rotor/session-new.vala',
  'api/objects/rotor/settings.vala',
  'api/objects/rotor/station.vala',
  'api/objects/rotor/station-info.vala',
  'api/objects/rotor/station-tracks.vala',
  'api/objects/rotor/station-tracks.vala',
  'api/objects/rotor/track-parameters.vala', 
  'api/objects/rotor/value.vala',
  'api/objects/rotor/value-heap.vala',
  'api/objects/rotor/wave.vala',
  'api/objects/track/chart.vala',
  'api/objects/track/lyrics-info.vala',
  'api/objects/track/meta-data.vala',
  'api/objects/track/track.vala',
  'api/objects/track-heap.vala',
  'api/objects/track-short.vala',
  'api/difference-builder.vala',
  'api/yam-client.vala',

  'cachier/cachier.vala',
  'cachier/controller.vala',
  'cachier/info-db.vala',
  'cachier/job.vala',
  'cachier/storager.vala',

  'player/mods/abstract-mode.vala',
  'player/mods/abstract-shufflable.vala',
  'player/mods/empty.vala',
  'player/mods/flow.vala',
  'player/mods/local.vala',
  'player/mods/track-list.vala',
  'player/mpris.vala',
  'player/player.vala',

  'talkers/abstract-talker.vala',
  'talkers/yam-talker.vala',

  'jsoner.vala',
  'likes-controller.vala',
  'logger.vala',
  'soup-wrapper.vala',
  'threader.vala',
  'utils.vala',
  'yam-object.vala',
)